--- a/package.json
+++ b/package.json
@@ -8,10 +8,21 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
+    "debug": "^2.6.8",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "mssql": "~2.2.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.3",
+    "jade": "^1.11.0",
+    "morgan": "^1.8.2",
+    "mssql": "~2.2.0",
+    "mysql": "^2.13.0",
+    "serve-favicon": "^2.4.3"
   }
 }
